Closed Bug 327250 Opened 20 years ago Closed 20 years ago

noframes tag implicitly ends p tag while noscript, nolayer, noembed tags do not

Categories

(Core :: DOM: HTML Parser, defect, P4)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: ddkilzer, Assigned: mrbkap)

References

()

Details

(Whiteboard: [patch])

Attachments

(2 files)

The <noframes> tag implicitly ends a <p> tag, while the <noscript>, <nolayer> and <noembed> tags do not in Firefox 1.5.0.1. This behavior differs from MSIE 6 in which none of the tags cause <p> to implicitly end. See also this WebKit bug: http://bugzilla.opendarwin.org/show_bug.cgi?id=7265
Attached file Test case v1
Changing to HTML: Parser component per Maciej's suggestion.
Component: DOM: HTML → HTML: Parser
Assignee: general → mrbkap
QA Contact: ian → parser
Sure, why not?
Status: NEW → ASSIGNED
OS: MacOS X → All
Priority: -- → P4
Hardware: Macintosh → All
Target Milestone: --- → mozilla1.9alpha
I don't have a strong oppinion either way on this.
fwiw, the old behavior isn't totally out the window, but this seems like an easy interoperability win.
Attachment #215802 - Flags: superreview?(jst)
Attachment #215802 - Flags: review?(jst)
Whiteboard: [patch]
Comment on attachment 215802 [details] [diff] [review] Allow inlines to contain noframes r+sr=jst
Attachment #215802 - Flags: superreview?(jst)
Attachment #215802 - Flags: superreview+
Attachment #215802 - Flags: review?(jst)
Attachment #215802 - Flags: review+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: