Allow flow elements to contain <noframes> for interoperability with other browsers. bug 327250, r+sr=jst