parser/htmlparser/src/nsElementTable.cpp
@@ -879,7 +879,7 @@ const nsHTMLElement gHTMLElements[] = {
     /*req-parent excl-parent*/          eHTMLTag_unknown,eHTMLTag_unknown,
     /*rootnodes,endrootnodes*/          &gNoframeRoot,&gNoframeRoot,
     /*autoclose starttags and endtags*/ 0,0,0,0,
-    /*parent,incl,exclgroups*/          kBlock, kFlowEntity, kNone,
+    /*parent,incl,exclgroups*/          kFlowEntity, kFlowEntity, kNone,
     /*special props, prop-range*/       0, kNoPropRange,
     /*special parents,kids,skip*/       &gNoframeRoot,0,eHTMLTag_unknown,
     /*contain-func*/                    0
